--- a/public/html/profileImage.html
+++ b/public/html/profileImage.html
@@ -1,11 +1,15 @@
-<div ng-controller="profileImageController">
+
+<!-- <div style="margin-top:-5%;"> -->
+<div ng-controller="profileImageController" >
 
 
   <div>Select an image file: <input type="file" id="fileInput" /></div>
   <div class="cropArea">
     <img-crop image="myImage" result-image="myCroppedImage"></img-crop>
   </div>
-  <div>Cropped Image:</div>
-  <div><img ng-src="{{myCroppedImage}}" /></div>
-  <a ng-click=saveProfileImage(myCroppedImage)>save</a>
+  <!-- <div>Cropped Image:</div>
+  <div><img ng-src="{{myCroppedImage}}" /></div> -->
+
+  <button style="margin-left:40%;"><a ng-click=saveProfileImage(myCroppedImage)>save</a>
 </div>
+<!-- </div> -->
