--- a/public/index.html
+++ b/public/index.html
@@ -45,4 +45,5 @@
 		<script src="controller/dashboardController.js"></script>
 		<script src="directives/dashboarddirective.js"></script>
 		<script src="controller/profileImageController.js"></script>
+		<script src="controller/archiveController.js"></script>
 </html>
