--- a/public/html/gridlistview.html
+++ b/public/html/gridlistview.html
@@ -8,8 +8,7 @@
 
       <div ng-class="showpreid" style="background-color:{{x.color}}">
         <div style="padding:2%;">
-          <!-- <span class="glyphicon glyphicon-link" ng-click="pinup(x._id,'true')" ng-show="icons" style="float:top-right;"></span> -->
-          <span class="glyphicon glyphicon-pushpin" ng-click="pinup(x._id,'true','false')" ng-show="icons" style="float:right;"></span>
+            <span class="glyphicon glyphicon-pushpin" ng-click="pinup(x._id,'true','false')" ng-show="icons" style="float:right;"></span>
           <div id="divtitle" style="margin-left:2%;"  >
             <i id="titlecss" ng-click="popup(x)" ng-bind-html = "x.title1"></i>
           </div>
@@ -99,14 +98,11 @@
 </div>
 </div>
 </div>
+<!-- <span class="glyphicon glyphicon-link" ng-click="pinup(x._id,'true')" ng-show="icons" style="float:top-right;"></span> -->
 
 
 
-<!--
-
-
-
-<div class="row" ng-class="gridlist" style="margin-top:34px;">
+<!-- <div class="row" ng-class="gridlist" style="margin-top:34px;">
   <div class="col-sm-2 col-md-2 col-lg-2"> </div>
   <div class="col-sm-10 col-md-10 col-lg-10">
 
