--- a/public/html/archive.html
+++ b/public/html/archive.html
@@ -8,7 +8,7 @@
 
       <div ng-class="showpreid" style="background-color:{{x.color}}">
         <div style="padding:2%;">
-          <span  class="glyphicon glyphicon-pushpin" ng-click="pinup(x._id,'true','false')" style="float:right;color:#4285f4;"></span>
+          <span  class="glyphicon glyphicon-pushpin" ng-click="pinup(x._id,'true','false')" ng-show="icons" style="float:right;color:#767676;"></span>
           <div id="divtitle" style="margin-left:2%;"  >
             <i id="titlecss" ng-click="popup(x)" ng-bind-html = "x.title1"></i>
           </div>
