--- a/public/html/dashboard.html
+++ b/public/html/dashboard.html
@@ -5,10 +5,18 @@
     <div class="container-fluid" >
         <div class="navbar-header">
           <a class="navbar-brand" href="#menu-toggle" id="menu-toggle" style="display:inline-block;">
-            <span class="glyphicon glyphicon-list tglid" ng-style="archivegly" id="tglid" aria-hidden="true"></span></a>
+            <span uib-tooltip="Main menu" tooltip-placement="bottom" tooltip-append-to-body="true">
+            <span class="glyphicon glyphicon-list tglid" ng-style="archivegly" id="tglid" aria-hidden="true"></span>
+          </span></a>
 
           <a class="navbar-brand" href="#menu-toggle" id="menu-toggle" >
-              <span id="keepClass" ng-style="archivebrand">My Keep </span>
+              <span id="keepClass" ng-style="archivebrand" uib-tooltip="My keep"  tooltip-placement="bottom" tooltip-append-to-body="true">My Keep  </span>
+
+
+               <!-- <div class="input-group" id="search">
+                 <input ng-model="q" ng-style="searchColor" type="text" placeholder="Search" id="query" name="search" value="">
+               </div> -->
+
           </a>
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" style="margin-right:12%;" aria-controls="navbar">
               <span class="sr-only">Toggle navigation</span>
@@ -18,14 +26,40 @@
             </button>
       </div>
 
+
+
+
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a><span class="glyphicon glyphicon-refresh" id="textColor" aria-hidden="true" style="margin-left:2%;"  ng-style="archivegly"></span> </a></li>
+          <li>
+          <a  id="refresh" uib-tooltip="Refresh" tooltip-placement="bottom" tooltip-append-to-body="true" ng-click="refresh()" >
+                    <svg id="refreshicon" height="24px" width="24px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 18" fill="grey">
+                     <path d="m9 13.5c-2.49 0-4.5-2.01-4.5-4.5s2.01-4.5 4.5-4.5c1.24 0 2.36 0.52 3.17 1.33l-2.17 2.17h5v-5l-1.76 1.76c-1.09-1.08-2.58-1.76-4.24-1.76-3.31 0-5.99 2.69-5.99 6s2.68 6 5.99 6c2.97 0 5.43-2.16 5.9-5h-1.52c-0.46 2-2.24 3.5-4.38 3.5z"/>
+                    </svg>
+
+                  </a>
+                  <li>
+
+
+          <!-- <li><a>
+              <span uib-tooltip="Refresh" tooltip-placement="bottom" tooltip-append-to-body="true">
+            <span class="glyphicon glyphicon-refresh" id="refreshicon" aria-hidden="true" style="margin-left:2%;margin-top:3px;"  ng-style="archivegly">
+            </span>
+            </span> </a></li> -->
+
+
           <li>
             <p class="navbar-text" id="textColor">
               <span class="list-style-buttons" id="textColor">
-                 <a id="gridview1"><span class="glyphicon glyphicon-th" id="gridgly" ng-style="gridstyle" style="margin-left:4%;" ng-click="gridview()"></a>
-                 <a id="listview1"><span class="glyphicon glyphicon-align-justify" id="listgly" ng-style="liststyle" style="display:none;margin-left:5%;" ng-click="listview()" ></a></span></span>
+                <!-- <span class="dropup" data-toggle="tooltip" data-placement="auto" title="Refresh"> -->
+                 <a id="gridview1" uib-tooltip="Grid view" tooltip-placement="bottom" tooltip-append-to-body="true">
+                   <span class="glyphicon glyphicon-th" id="gridgly" ng-style="gridstyle" style="margin-left:4%;margin-top:3px;" ng-click="gridview()">
+                   </a>
+                   <a id="listview1" uib-tooltip="List view" tooltip-placement="bottom" tooltip-append-to-body="true">
+                     <span class="glyphicon glyphicon-align-justify" id="listgly" ng-style="liststyle" style="display:none;margin-left:5%;margin-top:3px;" ng-click="listview()" >
+                   </a>
+                 </span>
+               </span>
              </span>
             </p>
           </li>
@@ -33,14 +67,14 @@
 
 
            <li ng-controller="profileImageController" class="dropdown" >
-                  <a class="dropdown-toggle" data-toggle="dropdown" >
+                  <a class="dropdown-toggle" data-toggle="dropdown"  uib-tooltip="MyAccount" tooltip-placement="bottom" tooltip-append-to-body="true" >
                     <img id="menu" class="circular--square1"  ng-src="{{userinfo.profileImage}}"  alt="{{userinfo.userName.charAt(0) | uppercase}}" style="align-self: center;font-weight: bold;"/>
                   </a>
                     <div  class="dropdown-menu" id="logoutdropdown">
 
 
-                     <div class="profile1 row">
-                        <img class="circular--square col-sm-6"  ng-src="{{userinfo.profileImage}}" alt="{{userinfo.userName.charAt(0) | uppercase}}"  style="padding-left: -2px;align-self: center;"/></span>
+                     <div class="profile1 row" >
+                        <img class="circular--square col-sm-6"  ng-src="{{userinfo.profileImage}}" alt="{{userinfo.userName.charAt(0) | uppercase}}"  uib-tooltip="Profile" tooltip-placement="bottom" tooltip-append-to-body="true" style="padding-left: -2px;align-self: center;cursor:pointer;"/></span>
                         <a ng-click="changeProfileImage()" style="margin-left:26px;margin-top:16px;color:teal">change Profile Image</a><br/>
                         <span style="margin-left:20px;margin-top:16px;">
                           <span style="margin-left:-2px;"><b>Name :</b>{{userinfo.userName}}</span><br>
@@ -66,14 +100,33 @@
                </li>
 
         </ul>
-        <form class="navbar-form navbar-right">
-          <div class="input-group" id="inputid" ng-style="archivesearch" style="padding-right:3%;background-color:black;">
+        <form class="navbar-form navbar-left">
+          <div class="input-group" id="inputid" ng-style="archivesearch" style="padding-right:3%;background-color:rgba(6,6,6,1);">
             <input type="text" class="form-control" ng-model="search" placeholder="Search..." id="query" ng-style="archivequery" name="search" value="" />
             <div class="input-group-btn">
-              <button type="submit" class="btn btn-default btn-block" type="submit"><span class="glyphicon glyphicon-search"></span></button>
+
+              <!-- <button type="submit" class="btn btn-default btn-block" type="submit"style="corsor:pointer;height:40px;" ng-style="archivequerybtn" uib-tooltip="Search"  tooltip-placement="bottom" tooltip-append-to-body="true">
+
+                <span class="glyphicon glyphicon-search"></span>
+              </button> -->
             </div>
           </div>
+          <!-- <div class="input-group" id="inputid" ng-style="archivesearch">
+            <input ng-model="q" ng-style="searchColor" type="text" placeholder="Search" id="query" name="search" value="">
+          </div> -->
         </form>
+
+
+
+        <!-- <div id="header-search" class="clr">
+				<form method="get" id="searchform" class="searchform att-searchform" action="https://wdexplorer.com/" role="search">
+
+					<button type="submit" class="submit" id="searchsubmit"><i class="fa fa-search"></i></button>
+				</form>
+			</div> -->
+
+
+
       </div>
     </div>
   </nav>
@@ -87,13 +140,13 @@
         <ul class="sidebar-nav">
           <li class="sidebar-brand"><br> </li>
           <li class="sidebar-brand">
-            <a href="#" class="navbar-brand">
+            <a href="#" class="navbar-brand" style="margin-top:8px;">
               <span class="glyphicon glyphicon-user" aria-hidden="true"></span> Profile
             </a>
           </li>
 
           <li>
-            <a href="#"><span class="glyphicon glyphicon-home"  aria-hidden="true"></span> Home</a>
+            <a href="#"><span class="glyphicon glyphicon-home"  aria-hidden="true"></span> Notes</a>
           </li>
 
           <li>
@@ -185,6 +238,9 @@
     $("#wrapper").toggleClass("toggled");
   });
 
+  // $(document).ready(function(){
+  //     $('[data-toggle="tooltip"]').tooltip();
+  // });
   // <Msg box>
   // $("#userMsgBox").hide();
   // $("#mainMsgBox").click(function() {
@@ -199,6 +255,97 @@
 </script>
 
 </html>
+
+
+
+<!-- <div class="gb_qc gb_Cd gb_Nd gb_Bd gb_Id">
+  <div class="gb_ee gb_Ed"></div>
+  <div class="gb_zd"> -->
+    <!-- <form class="gb_ke" aria-expanded="false" style=""width:100px;height:20px;" method="get">
+      <button class="gb_Pe" aria-label="Clear search" type="button" style="visibility: hidden;width:100px;height:15px;">
+        <svg height="24px" viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg">
+          <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"></path>
+          <path d="M0 0h24v24H0z" fill="none"></path>
+        </svg>
+      </button>
+      <button class="gb_De" aria-label="Search" role="button">
+        <svg height="24px" viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg">
+          <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z">
+          </path>
+          <path d="M0 0h24v24H0z" fill="none"></path>
+        </svg
+        ></button>
+        <button class="gb_Oe" aria-label="Close search" type="button">
+          <svg height="24px" viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg" style="color:red;">
+            <path d="M0 0h24v24H0z" fill="none"></path>
+            <path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"></path>
+          </svg>
+        </button>
+        <div class="gb_Te">
+          <input class="gb_Be" aria-label="Search" autocomplete="off" placeholder="Search" value="" name="q" role="combobox" type="text">
+        </div>
+      </form>
+    </div>
+    <div class="gb_fe gb_Ed">
+      <div class="Q0hgme-Yygnk-m5SR9c gb_ge gb_xb to915-xJ5Hnf">
+        <div class="Yygnk-m5SR9c-Bz112c"></div>
+        <div class="Q0hgme-n5T17d-woLtV CZjX4e" style="display: none;">
+          <div class="aZ2wEe-pbTTYe v3pZbf">
+            <div class="LkdAo-e9ayKc LK5yu">
+              <div class="LkdAo hj4D6d"></div>
+            </div>
+            <div class="pehrl-TpMipd">
+              <div class="LkdAo hj4D6d"></div>
+            </div>
+            <div class="LkdAo-e9ayKc qwU8Me">
+              <div class="LkdAo hj4D6d"></div>
+            </div>
+          </div>
+          <div class="aZ2wEe-pbTTYe oq6NAc">
+            <div class="LkdAo-e9ayKc LK5yu">
+              <div class="LkdAo hj4D6d">
+              </div>
+            </div>
+            <div class="pehrl-TpMipd">
+              <div class="LkdAo hj4D6d"></div>
+            </div>
+            <div class="LkdAo-e9ayKc qwU8Me">
+              <div class="LkdAo hj4D6d"></div>
+            </div>
+          </div>
+          <div class="aZ2wEe-pbTTYe gS7Ybc">
+            <div class="LkdAo-e9ayKc LK5yu">
+              <div class="LkdAo hj4D6d"></div>
+            </div>
+            <div class="pehrl-TpMipd">
+              <div class="LkdAo hj4D6d"></div>
+            </div>
+            <div class="LkdAo-e9ayKc qwU8Me">
+              <div class="LkdAo hj4D6d"></div>
+            </div>
+          </div>
+          <div class="aZ2wEe-pbTTYe nllRtd">
+            <div class="LkdAo-e9ayKc LK5yu">
+              <div class="LkdAo hj4D6d"></div>
+            </div>
+            <div class="pehrl-TpMipd">
+              <div class="LkdAo hj4D6d"></div>
+            </div>
+            <div class="LkdAo-e9ayKc qwU8Me">
+              <div class="LkdAo hj4D6d"></div>
+            </div>
+          </div>
+        </div>
+        <div role="button" class="Q0hgme-LgbsSe Q0hgme-Bz112c-LgbsSe qrlFte VIpgJd-LgbsSe Bz112c-LgbsSe-to915-xJ5Hnf" tabindex="0" aria-label="Refresh" style="user-select: none;">
+        </div>
+      </div>
+      <div role="button" class="Q0hgme-LgbsSe Q0hgme-Bz112c-LgbsSe VIpgJd-LgbsSe gb_ge gb_xb neVct-SX9D7d-ornU0b UU3Zxb-LgbsSe Bz112c-LgbsSe-to915-xJ5Hnf" tabindex="0" aria-label="List View" style="user-select: none;">
+      </div> -->
+    <!-- </div>
+  </div> -->
+
+
+
 
 
 
