--- a/public/html/login.html
+++ b/public/html/login.html
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-inverse navbar-fixed-top" style="background-color: rgba(6,6,6,1);" role="navigation">
+  <nav class="navbar navbar-inverse navbar-fixed-top" style="background-color: #ccc;" role="navigation">
       <div class="container-fluid">
           <div class="navbar-header">
             <a class="navbar-brand" href="#home">My Keep</a>
