updated on 9th June

--- a/public/html/archive.html
+++ b/public/html/archive.html
@@ -1,6 +1,6 @@
 <div class="row" ng-class="gridlist" style="margin-top:34px;">
-  <div class="col-sm-2 col-md-2 col-lg-2"> </div>
-  <div class="col-sm-10 col-md-10 col-lg-10">
+  <!-- <div class="col-sm-2 col-md-2 col-lg-2"> </div>
+  <div class="col-sm-10 col-md-10 col-lg-10"> -->
 
 <div style="margin:22px 16px;" ></div>
 <div>
@@ -97,4 +97,4 @@
 </div>
 </div>
 
-</div>
+<!-- </div> -->
