--- a/public/html/pinup.html
+++ b/public/html/pinup.html
@@ -1,10 +1,10 @@
 <div class="row" ng-class="gridlist" style="margin-top:34px;">
-  <div class="col-sm-2 col-md-2 col-lg-2"> </div>
-  <div class="col-sm-10 col-md-10 col-lg-10">
+  <!-- <div class="col-sm-2 col-md-2 col-lg-2"> </div>
+  <div class="col-sm-10 col-md-10 col-lg-10"> -->
 
 <div id="pinned" >Pinned</div>
 <div>
-  <div id="innote" ng-if="!x.archive && x.pinup" ng-class="innote" ng-mouseover="icons=true" ng-mouseleave="icons=false" ng-repeat="x in message | filter:search as results track by $index" testpackery >
+  <div id="innote" ng-if="!x.archive && x.pinup" ng-class="innote" ng-mouseover="icons=true" ng-mouseleave="icons=false" ng-repeat="x in message | filter:search as results track by $index" >
 
       <div ng-class="showpreid" style="background-color:{{x.color}}">
         <div style="padding:2%;">
@@ -99,7 +99,7 @@
 </div>
 </div>
 
-</div>
+<!-- </div> -->
 
 
 
