--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,11 @@
 <html ng-app="myApp">
 
 <head>
-	  <title>mykeep</title>
+
 		<meta charset="utf-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>mykeep</title>
+		<link rel="icon" href="./images/logo6.jpg">
 
 	 <link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.min.css">
 	 <link rel="stylesheet" type="text/css" href="css/index.css">
@@ -33,7 +35,7 @@
 		<script src="bower_components/angular-bootstrap-datetimepicker/src/js/datetimepicker.js" type="text/javascript"></script>
 		<script src="bower_components/angular-bootstrap-datetimepicker/src/js/datetimepicker.templates.js"></script>
 
-		
+
 		<script src="https://packery.metafizzy.co/packery.pkgd.min.js"></script>
 		<script src="https://draggabilly.desandro.com/draggabilly.pkgd.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-beta.2/angular-sanitize.js"></script>
