--- a/public/html/reminder.html
+++ b/public/html/reminder.html
@@ -1,14 +1,12 @@
 <div class="row" ng-class="gridlist" style="margin-top:34px;">
-  
-<div id="pinned" >Pinned</div>
+<div id="reminderdiv" >Reminders</div>
+<div style="margin:22px 16px;" ></div>
 <div>
-  <div id="innote" ng-if="!x.archive && x.pinup" ng-class="innote" ng-mouseover="icons=true" ng-mouseleave="icons=false" ng-repeat="x in message | filter:search as results track by $index" >
+  <div id="innote" ng-if="x.reminder" ng-class="innote" ng-mouseover="icons=true" ng-mouseleave="icons=false" ng-repeat="x in message | filter:search as results track by $index">
 
       <div ng-class="showpreid" style="background-color:{{x.color}}">
         <div style="padding:2%;">
-          <span class="dropup" >
-          <span  class="glyphicon glyphicon-pushpin" uib-tooltip="Unpin note" tooltip-placement="bottom" tooltip-append-to-body="true" ng-click="pinup(x._id,'false','false')" style="float:right;color:#4285f4;"></span>
-        </span>
+          <span  class="glyphicon glyphicon-pushpin" ng-click="pinup(x._id,'true','false')" ng-show="icons" style="float:right;color:#767676;" uib-tooltip="Pin archived note"  tooltip-placement="bottom" tooltip-append-to-body="true"></span>
           <div id="divtitle" style="margin-left:2%;"  >
             <i id="titlecss" ng-click="popup(x)" ng-bind-html = "x.title1"></i>
           </div>
@@ -52,7 +50,7 @@
               <i aria-hidden="true">
                 <span  uib-dropdown on-toggle dropdown-append-to-body="true" style="margin-left:6px;">
                       <a href uib-dropdown-toggle>
-                        <img id='reminder1'  style="width:14px;height:35%" src="../images/color.png" uib-tooltip="Change color"  tooltip-placement="bottom" tooltip-append-to-body="true" />
+                        <img id='reminder1'  style="width:14px;height:35%" src="../images/color.png" uib-tooltip="change color"  tooltip-placement="bottom" tooltip-append-to-body="true"/>
                       </a>
                       <div uib-dropdown-menu aria-labelledby="simple-dropdown">
                           <a id="normal" ng-repeat = "y in color" style="font-size:10px;">
@@ -63,14 +61,14 @@
                 </i>
 
                 <i style="margin-left:8px" style="font-size:36px" aria-hidden="true">
-                  <img id='reminder1'  ng-click="archive(x._id,'true','false')" style="width:14px;height:35%" src="../images/archive.png" uib-tooltip="Archive"  tooltip-placement="bottom" tooltip-append-to-body="true" />
+                  <img id='reminder1'  ng-click="archive(x._id,'false','false')" style="width:18px;height:18px" src="../images/unarchive.svg" uib-tooltip="Unarchive"  tooltip-placement="bottom" tooltip-append-to-body="true"/>
                 </i>
 
 
          <i style="margin-left:6px">
             <span uib-dropdown on-toggle dropdown-append-to-body="true" >
                   <a href uib-dropdown-toggle>
-                      <i id='more' uib-tooltip="More"  tooltip-placement="bottom" tooltip-append-to-body="true" style="width:16px;height:35%;margin-top:2%"  class="fa fa-ellipsis-v"></i>
+                      <i id='more'  style="width:16px;height:35%;margin-top:2%" class="fa fa-ellipsis-v" uib-tooltip="More"  tooltip-placement="bottom" tooltip-append-to-body="true"></i>
                   </a>
                   <ul uib-dropdown-menu aria-labelledby="simple-dropdown">
                         <li id="fulldrop">
@@ -96,3 +94,5 @@
 </div>
 </div>
 </div>
+
+<!-- </div> -->
