--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,6 @@
 <html ng-app="myApp">
 
 <head>
-
 		<meta charset="utf-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>mykeep</title>
@@ -18,6 +17,7 @@
 	 <link rel="stylesheet" href="bower_components/angular-bootstrap-datetimepicker/src/css/datetimepicker.css">
 
 </head>
+
 <body>
 	<div id="main"> <!-- MAIN CONTENT AND INJECTED VIEWS -->
 		<div ui-view></div>
@@ -29,7 +29,7 @@
 		<script type="text/javascript" src="bower_components/angular/angular.js"></script>
 		<script  src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 		<script src="bower_components/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
-		  <script src="https://cdnjs.cloudflare.com/ajax/libs/ng-img-crop/0.3.2/ng-img-crop.js"></script>
+	 	<script src="https://cdnjs.cloudflare.com/ajax/libs/ng-img-crop/0.3.2/ng-img-crop.js"></script>
 
 		<script src="bower_components/moment/moment.js"></script>
 		<script src="bower_components/angular-bootstrap-datetimepicker/src/js/datetimepicker.js" type="text/javascript"></script>
@@ -49,4 +49,5 @@
 		<script src="directives/dashboarddirective.js"></script>
 		<script src="controller/profileImageController.js"></script>
 		<script src="controller/archiveController.js"></script>
+		<script src="controller/reminderController.js"></script>
 </html>
