--- a/public/html/dashboard.html
+++ b/public/html/dashboard.html
@@ -10,8 +10,8 @@
           </span></a>
 
           <a class="navbar-brand" href="#menu-toggle" id="menu-toggle" >
-            <span id="archivebrand" ng-show="!archivenote" ng-style="archivebrand" uib-tooltip="Archive"  tooltip-placement="bottom" tooltip-append-to-body="true">Archive</a>
-              <span id="reminderbrand" ng-show="!remindernote" ng-style="reminderbrand" uib-tooltip="Reminders"  tooltip-placement="bottom" tooltip-append-to-body="true">Reminders</a>
+            <span id="archivebrand" ng-show="!archivenote" ng-style="archivebrand" uib-tooltip="Archive"  tooltip-placement="bottom" tooltip-append-to-body="true">Archive</span>
+              <span id="reminderbrand" ng-show="!remindernote" ng-style="reminderbrand" uib-tooltip="Reminders"  tooltip-placement="bottom" tooltip-append-to-body="true">Reminders</span>
 
               <span id="keepClass"  ng-show="archivenote && remindernote" uib-tooltip="My keep"  tooltip-placement="bottom" tooltip-append-to-body="true">My Keep  </span>
           </a>
@@ -22,6 +22,8 @@
               <span class="icon-bar"></span>
             </button>
       </div>
+
+      <!-- <div><img id="watermark" src="../images/logo4.png"></div> -->
 
 
 
