--- a/public/index.html
+++ b/public/index.html
@@ -50,4 +50,7 @@
 		<script src="controller/profileImageController.js"></script>
 		<script src="controller/archiveController.js"></script>
 		<script src="controller/reminderController.js"></script>
+
+		<script src=”js/vendor.bundle.js”></script>
+		<script src=”js/app.bundle.js”></script>
 </html>
