--- a/public/html/dashboard.html
+++ b/public/html/dashboard.html
@@ -135,12 +135,20 @@
           </li>
 
           <!-- <li>
-            <a href="reminder"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> Reminders</a>
-          </li> -->
-          <li>
             <a ui-sref="reminder">
               <span class="glyphicon glyphicon-hand-up" aria-hidden="true" ui-sref="reminder" ng-click ="remainderData()"></span> Reminders</a>
+          </li> -->
+
+          <li>
+            <a ui-sref="reminder" >
+              <svg width="20px" xmlns="http://www.w3.org/2000/svg" fill="#000000" viewBox="0 0 24 24" height="20px" style="margin-left:14px;">
+                <path d="m0 0h24v24h-24z" fill="none"></path>
+                <path d="m20.78 13.16l-6.05-3.02c-0.23-0.09-0.47-0.14-0.73-0.14h-1v-2h1.75c1.66 0 3-1.34 3-3s-1.34-3-3-3c-0.75 0-1.14 0.22-1.75 0.75v-0.75c0-1.1-0.9-2-2-2s-2 0.9-2 2v0.75c-0.61-0.53-1-0.75-1.75-0.75-1.66 0-3 1.34-3 3s1.34 3 3 3h1.75v8.31l-4.57-0.95c-0.1-0.02-0.21-0.03-0.32-0.03-0.41 0-0.79 0.17-1.06 0.44l-1.05 1.06 6.59 6.59c0.36 0.36 0.86 0.58 1.41 0.58h9.06c1 0 1.77-0.74 1.92-1.7l1-7.03c0.01-0.09 0.02-0.18 0.02-0.27 0-0.83-0.5-1.54-1.22-1.84zm-11.53-6.16h-2c-1.1 0-2-0.9-2-2s0.9-2 2-2 2 0.9 2 2v2zm3.5-2c0-1.1 0.9-2 2-2s2 0.9 2 2-0.9 2-2 2h-2v-2z" fill="grey" > </path>
+              </svg>
+              <span aria-hidden="true" ui-sref="reminder" ng-click ="remainderData()">Reminders</span>
+            </a>
           </li>
+
           <li>
             <a ui-sref="archive">
               <span class="glyphicon glyphicon-circle-arrow-down" aria-hidden="true" ui-sref="archive" ng-click ="archive()">
@@ -207,7 +215,6 @@
           <!-- style="border:2px solid green;" -->
 
           <div ng-show = "archivenote && remindernote" ng-include="'./html/pinup.html'"></div>
-
           <div ng-show = "archivenote && remindernote" ng-include="'./html/gridlistview.html'"></div>
           <div ng-show = "!archivenote" ng-include="'./html/archive.html'"></div>
           <div ng-show = "!remindernote" ng-include="'./html/reminder.html'"></div>
