--- a/public/html/gridlistview.html
+++ b/public/html/gridlistview.html
@@ -56,7 +56,7 @@
                         <img id='reminder1'  style="width:14px;height:35%" src="../images/color.png" uib-tooltip="Change color"  tooltip-placement="bottom" tooltip-append-to-body="true" />
                       </a>
                       <div uib-dropdown-menu aria-labelledby="simple-dropdown">
-                          <a id="normal" ng-repeat = "y in color" style="font-size:10px;">
+                          <a id="normal" ng-repeat = "y in color" style="font-size:10px;" uib-tooltip="{{y.tooltip}}" tooltip-placement="bottom" tooltip-append-to-body="true" >
                                 <img ng-src="{{y.path}}"  ng-click="changeColor(y.color,x._id)">
                             </a>
                         </div>
