--- a/public/html/pinup.html
+++ b/public/html/pinup.html
@@ -1,5 +1,5 @@
 <div class="row" ng-class="gridlist" style="margin-top:34px;">
-  
+
 <div id="pinned" >Pinned</div>
 <div>
   <div id="innote" ng-if="!x.archive && x.pinup" ng-class="innote" ng-mouseover="icons=true" ng-mouseleave="icons=false" ng-repeat="x in message | filter:search as results track by $index" >
@@ -55,7 +55,7 @@
                         <img id='reminder1'  style="width:14px;height:35%" src="../images/color.png" uib-tooltip="Change color"  tooltip-placement="bottom" tooltip-append-to-body="true" />
                       </a>
                       <div uib-dropdown-menu aria-labelledby="simple-dropdown">
-                          <a id="normal" ng-repeat = "y in color" style="font-size:10px;">
+                          <a id="normal" ng-repeat = "y in color" style="font-size:10px;" uib-tooltip="{{y.tooltip}}" tooltip-placement="bottom" tooltip-append-to-body="true">
                                 <img ng-src="{{y.path}}" ng-click="changeColor(y.color,x._id)">
                             </a>
                         </div>
